--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "This is React & NodeJS application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "serve": "nodemon app.js"
   },
   "keywords": [
     "javascript",
@@ -12,5 +13,16 @@
     "react"
   ],
   "author": "Yuriy Vedernikov <yuriy.jsx@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.15",
+    "prettier": "2.5.1"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "config": "^3.3.7",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.2"
+  }
 }
