--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "This is React & NodeJS application",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "serve": "nodemon app.js"
+    "start": "cross-env NODE_ENV=production node app.js",
+    "serve": "cross-env NODE_ENV=development nodemon app.js"
   },
   "keywords": [
     "javascript",
