--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,12 @@
     "prettier": "2.5.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
     "config": "^3.3.7",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2"
   }
 }
