--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.2",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "styled-components": "^5.3.1",
