--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "online-store-app",
   "version": "1.0.0",
   "description": "This is React & NodeJS application",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node app.js",
     "serve": "cross-env NODE_ENV=development nodemon app.js"
