refactor: update dependencies in the project

--- a/client/package.json
+++ b/client/package.json
@@ -3,25 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@reduxjs/toolkit": "^1.8.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.26.0",
-    "bootstrap": "^5.1.0",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.2.1",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "react-select": "^5.2.2",
-    "react-toastify": "^8.1.0",
-    "redux": "^4.1.2",
-    "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1"
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "latest",
+    "@mui/material": "latest",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "latest",
+    "bootstrap": "latest",
+    "history": "^4.10.1",
+    "react": "17.0.2",
+    "react-bootstrap": "latest",
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "5.3.0",
+    "react-select": "latest",
+    "react-toastify": "7.0.4",
+    "redux": "^4.2.1",
+    "styled-components": "^5.3.10",
+    "web-vitals": "latest"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "12.1.5",
+    "@testing-library/user-event": "13.5.0",
+    "autoprefixer": "^10.4.20",
+    "prop-types": "^15.8.1",
+    "react-scripts": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
